# reinforcing-mars

./: .gitignore  DRAFT_VARIANT_IMPLEMENTATION.md  LICENSE  Makefile  PRELUDES_IMPLEMENTATION_COMPARISON.md  QUICK_START.md  README.md  RESEARCH_PHASE_COMPARISON.md  pyproject.toml  setup_uv.sh
python/: PHASE7_SUMMARY.md  README.md  UV_SETUP.md
python/terraforming_mars/: __init__.py
python/tests/: README.md  __init__.py  conftest.py  test_action_types.py  test_game_basic.py  test_integration.py  test_player.py  test_uv_integration.py
simulation/: Cargo.toml  pyproject.toml
simulation/src/: lib.rs
simulation/src/actions/: action.rs  action_executor.rs  mod.rs  payment.rs  standard_actions.rs  standard_projects.rs
simulation/src/board/: board.rs  mod.rs  space.rs  tile.rs
simulation/src/cards/: base.rs  behavior.rs  behavior_executor.rs  card.rs  card_play.rs  card_registry.rs  card_resource.rs  card_type.rs  minimal_card.rs  mod.rs  requirements.rs  traits.rs
simulation/src/deferred/: common.rs  deferred_action.rs  mod.rs  priority.rs  queue.rs
simulation/src/game/: awards.rs  draft.rs  game.rs  global_params.rs  milestones.rs  mod.rs  phase.rs  preludes.rs  research.rs
simulation/src/player/: mod.rs  player.rs  production.rs  resources.rs  tags.rs
simulation/src/python/: game_wrapper.rs  mod.rs  player_wrapper.rs  types.rs
simulation/src/utils/: random.rs
