[package]
name = "reinforcing_mars_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "reinforcing_mars_sim"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.21", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:numpy"]

[dev-dependencies]

